syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.yggdrash.proto";

message Block {
    int64 height = 1;
    string hash = 2;
    string data = 3;
}

message BlockList {
    repeated Block book = 1;
}

service BlockService {
    rpc Sync(Block) returns (Block) {}
}